<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.views.DetailActivity"
        android:layout_margin="@dimen/dimen2x">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/img_detail_width"
            android:layout_height="@dimen/img_detail_height"
            android:contentDescription="@string/coverimage_txt"
            android:src="@drawable/ic_baseline_image_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/field_desc_title"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen1x"
            android:layout_marginTop="@dimen/dimen1x"
            android:text="@string/field_desc_title"
            app:layout_constraintBottom_toTopOf="@+id/field_popularity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/field_title"
            style="@style/h3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen2x"
            android:layout_marginTop="@dimen/dimen05x"
            android:layout_marginEnd="@dimen/dimen1x"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@+id/field_popularity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/field_desc_title"
            app:layout_constraintVertical_bias="0.0"
            tools:text="dasdasdasdasdadasdasdasdasdasdasdasdasdasdasdasdasdasd" />

        <TextView
            android:id="@+id/field_desc_popularity"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen1x"
            android:layout_marginTop="@dimen/dimen2x"
            android:text="@string/field_desc_popularity"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/field_title" />

        <TextView
            android:id="@+id/field_popularity"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen2x"
            android:layout_marginTop="@dimen/dimen05x"
            android:layout_marginEnd="@dimen/dimen1x"
            app:layout_constraintBottom_toTopOf="@+id/field_desc_release_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/field_desc_popularity"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Ini Popularitas" />

        <TextView
            android:id="@+id/field_desc_release_date"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen1x"
            android:layout_marginTop="@dimen/dimen2x"
            android:text="@string/field_desc_release_date"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/field_popularity" />

        <TextView
            android:id="@+id/field_release_date"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen2x"
            android:layout_marginTop="@dimen/dimen05x"
            android:layout_marginEnd="@dimen/dimen1x"
            app:layout_constraintBottom_toTopOf="@+id/field_desc_rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/field_desc_release_date"
            app:layout_constraintVertical_bias="0.0"
            tools:text="01/01/2021" />

        <TextView
            android:id="@+id/field_desc_rating"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen1x"
            android:layout_marginTop="@dimen/dimen2x"
            android:text="@string/field_desc_rating"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/field_release_date" />

        <TextView
            android:id="@+id/field_rating"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen2x"
            android:layout_marginTop="@dimen/dimen05x"
            android:layout_marginEnd="@dimen/dimen1x"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/field_desc_rating"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Returning Series" />


        <TextView
            android:id="@+id/field_desc_overview"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen1x"
            android:layout_marginTop="16dp"
            android:text="@string/field_desc_overview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_rating"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/field_overview"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen1x"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/dimen1x"
            android:textColor="@color/dark_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_desc_overview"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Ini Overview" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_height="wrap_content"
            android:contentDescription="@string/coverimage_txt"
            android:src="@drawable/ic_baseline_favorite_24"

            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.866"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.926"
            android:layout_width="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>